# TrackingExpertPlus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindAzureKinect.cmake  FindCUB.cmake  FindCub.cmake  FindEigen3.cmake  FindGLFW3.cmake  FindGlew.cmake  FindGlfw3.cmake  FindGlm.cmake  FindOpenCV.cmake  FindOpenNI2.cmake  FindOpenSceneGraph.cmake  FindStructure.cmake  FindTBB.cmake  Findglew.cmake
data/: Test.cmd
data/camera_param/: StructureCore_default_params.json
data/gfx/: N0-000_pc_gfx.mtl
data/tracking/: N0-000_pc.ply
examples/: CMakeLists.txt
examples/antenna_demo/: CMakeLists.txt
examples/antenna_demo/models/: PartA_pc.ply  PartB_pc.ply  PartC_pc.ply  PartD_pc.ply  PartE_pc.ply  load_models.txt
examples/antenna_demo/src/: AntennaRenderer.cpp  AntennaRenderer.h  CMakeLists.txt  ExAntennaProc.json  demo_main.cpp
examples/demo_common/: AssemblySequence.cpp  AssemblySequence.h  PartDatabase.cpp  PartDatabase.h  Procedure.h  ProcedureLoader.cpp  ProcedureLoader.h  ProcedureRenderer.cpp  ProcedureRenderer.h  Sequence.h
examples/gear_demo/: CMakeLists.txt
examples/gear_demo/models/: N0-000_pc.ply  N0-000_pc_gfx.mtl  N1-001_pc.ply  N1-002_pc.ply  N1-003_pc.ply  N1-003_pc_gfx.mtl  N2-001_pc.ply  N2-002_pc.ply  N2-003_pc.ply  N3-001_pc.ply  N3-002_pc.ply  N4-001_pc.ply  N4-002_pc.ply  N4-003_pc.ply  N4-004_pc.ply  load_models.txt
examples/gear_demo/src/: AssemblySequence.cpp  AssemblySequence.h  CMakeLists.txt  DemoScene.cpp  DemoScene.h  ExGearProc.json  GearBoxRenderer.cpp  GearBoxRenderer.h  PartDatabase.cpp  PartDatabase.h  Sequence.h  demo_main.cpp
examples/trackingexpertdemo/src/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  CamPose.cpp  CamPose.h  CameraParameters.cpp  CameraParameters.h  ColorCoder.cpp  ColorCoder.h  EasyTimer.cpp  EasyTimer.h  FileUtils.cpp  FileUtils.h  GPUvoxelDownsample.cu  GPUvoxelDownsample.h  PointCloudGPU.cpp  PointCloudGPU.h  TrackingExpertDemo.cpp  TrackingExpertDemo.h  TrackingExpertParams.h  TrackingExpertRegistration.cpp  TrackingExpertRegistration.h  main_texpert_demo.cpp
examples/trackingexpertexample/: CMakeLists.txt
examples/trackingexpertexample/src/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  DebugHelpers.cpp  DebugHelpers.h  DebugSwitches.h  MainRenderProcess.cpp  MainRenderProcess.h  MainTrackingProcess.cpp  MainTrackingProcess.h  PointCloudManager.cpp  PointCloudManager.h  TrackingExpertDemo.cpp  TrackingExpertDemo.h  TrackingExpertParams.h  main_texpert_example.cpp
include/: trackingx.h
include/camera/: AzureKinectFromMKV.h  CameraParameters.h  FilterTypes.h  FrameReader.h  ICaptureDevice.h  ICaptureDeviceTypes.h  KinectAzureCaptureDevice.h  PointCloudProducer.h  SensorDefaultParams.h  StructureCoreCaptureDevice.h
include/detection/: CPFClustering.h  CPFData.h  CPFDetect.h  CPFMatching.h  CPFMatchingExp.h  CPFMatchingExpGPU.h  CPFMatchingWrapper.h  CPFProjection.h  CPFRenderHelpers.h  CPFTools.h  CPFToolsGPU.h  CPFTypes.h  FDClustering.h  FDMatching.h  FDTools.h  FDTypes.h  (+2 more)
src/: CMakeLists.txt  LogFileWriter.cpp  LogFileWriter.h
src/auto_tests/: camera_test.cpp  registration_analysis.h  registration_test.cpp
src/cam/: AzureKinectFromMKV.cpp  CameraParameters.cpp  FrameReader.cpp  FrameReader.h  KinectAzureCaptureDevice.cpp  PointCloudProducer.cpp  PointCloudProducer.h  SampleTypes.h  SensorConfig.h  SensorDefaultParams.h  SensorRealSense.cpp  SensorRealSense.h  SensorWatcher.cpp  SensorWatcher.h  StructureCoreCaptureDevice.cpp
src/cam/cuda/: cuDeviceMemory.cpp  cuDeviceMemory.h  cuDeviceMemory3f.cpp  cuFilter.cu  cuPCU.cu  cuPCU.h  cuPCU3f.cu  cuPCUImpl.h  cuPCUImpl3f.cu  cuPositionFromRect.cu  cuPositionFromRect.h  cuPrincipleCurvature.cu  cutil_matrix.h
src/detection/: CPFClustering.cpp  CPFData.cpp  CPFDetect.cpp  CPFMatching.cpp  CPFMatchingExp.cpp  CPFMatchingExpGPU.cpp  CPFProjection.cpp  CPFRenderHelpers.cpp  CPFTools.cpp  CPFToolsGPU.cu  CPFToolsGPU.h  FDClustering.cpp  FDClustering.h  FDMatching.cpp  FDMatching.h  FDTools.cpp  FDTools.h  FDTypes.cpp  FDTypes.h  PCRegistration.cpp
src/kdtree/: CudaErrorCheck.cu  Cuda_Common.h  Cuda_Helpers.cpp  Cuda_Helpers.h  Cuda_KdTree.cu  Cuda_KdTree.h  ResourceManager.cpp  dequeue.cu  dequeue.h  main.cpp  sort.cu  sort.h  types.h
src/loader/: DataReaderWriter.cpp  FileUtils.cpp  FileUtils.h  FileUtilsExt.cpp  LoaderOBJ.cpp  LoaderOBJ.h  NoiseFilter.cpp  NoiseFilter.h  ReaderWriterOBJ.cpp  ReaderWriterPLY.cpp  ReaderWriterUtil.cpp  Sampling.cpp  Sampling.h  SamplingTypes.h  Types.h
src/nearest_neighbors/: ICP.cpp  ICPKNN.cpp  ICPReject.cpp  ICPTransform.cpp  ICPTransform.h  KNN.cpp  NearestNeighbors.cpp  NearestNeighbors.h  cuICP.cu  cuICPMemory.cpp
src/point_cloud/: MatrixTransform.cpp  MatrixUtils.cpp  MatrixUtils.h  PointCloudEval.cpp  PointCloudEval.h  PointCloudTrans.cpp  PointCloudTransform.cpp  PointCloudTransform.h  PointCloudUtils.cpp  PointCloudUtils.h  Utils.h
src/shaders/: lit_scene.fs  simple_point_renderer.vs
src/utils/: ArgParser.cpp  ArgParser.h  FileUtilsX.cpp  HomographyHelper.cpp  LogFileWriter.cpp  LogReaderWriter.cpp  LogReaderWriter.h  LogTypes.h  MatrixConv.cpp  RandomGenerator.cpp  RandomGenerator.h  TimeUtils.cpp  TimeUtils.h
tests/: CMakeLists.txt  registration_analysis.cpp  registration_analysis.h  registration_test.cpp
tests/test_azure_camera/: CMakeLists.txt  main_camera_test.cpp
tests/test_camera/: CMakeLists.txt  main_camera_test.cpp
tests/test_cmake/: CMakeLists.txt
tests/test_cpf/: CMakeLists.txt  main_cpf_test.cpp
tests/test_cpfgpu/: main_cpf_test.cpp
tests/test_detection/: CMakeLists.txt  main_cpf_test.cpp  registration_analysis.cpp  registration_analysis.h  registration_test.cpp
tests/test_homography/: test_main.cpp
tests/test_icp/: CMakeLists.txt  icp_test.cpp
tests/test_icp_camera/: CMakeLists.txt  ReadFiles.cpp  ReadFiles.h  test_icp_camera.cpp
tests/test_knn/: CMakeLists.txt  knn_test.cpp
tests/test_matrix_conv/: CMakeLists.txt  main_matrix_conv_test.cpp
tests/test_tracking/: CMakeLists.txt  TrackingMain.cpp  TrackingMain.h  tracking_test.cpp
(+54 files in other folders)
